# document-intelligence

./: .drone.yml  .gitignore  Dockerfile.backend  README.md  docker-compose.yml
backend/: .env.example  main.py  pyproject.toml
backend/agents/: agentic_rag_qa.py  evaluator.py  extractor.py  scanner.py  state.py  supervisor.py
backend/api/: dependencies.py
backend/api/routes/: documents.py  ingestion.py  qa.py  reports.py  upload.py
backend/cloud/: __init__.py
backend/cloud/aws/: __init__.py
backend/cloud/aws/bedrock/: __init__.py  claude_vision.py
backend/cloud/aws/s3/: __init__.py  bucket_access.py  client.py
backend/cloud/gdrive/: __init__.py  gdrive_access.py  simple_extraction.py
backend/config/: __init__.py  industry_config.py  storage_config.py
backend/data/seed/: documents_initial_state_dict.json
backend/db/: mongodb_connector.py  vector_search.py  vector_search_index_creator.py
backend/db/collections/seeds/: README.md  document_intelligence.agent_personas.json  document_intelligence.assessments.json  document_intelligence.buckets.example.json  document_intelligence.checkpoint_writes_aio.json  document_intelligence.checkpoints_aio.json  document_intelligence.chunks.example.json  document_intelligence.chunks.json  (+8 more)
backend/processors/: document_processor.py
backend/services/: __init__.py  document_cache.py  report_generator.py  scheduler.py
backend/tools/: document_tools.py  embedding_tools.py  vision_tools.py
backend/vogayeai/: context_embeddings.py
backend/workflows/: ingestion_builder.py  ingestion_workflow.py
(+10 files in other folders)
